--- a/.env
+++ b/.env
@@ -2,3 +2,7 @@ accestoken=fa9d474ea345611f48863d7ec7d6b198
 db_name=testtaskdb
 db_user=postgres
 db_password=admin
+DEBUG=1
+SECRET_KEY=somekey
+DB_HOST=127.0.0.1
+DB_PORT=8000
